# relay

./: .env.example  .gitignore  CLAUDE.md  NOTES-overnight.md  README.md  Relay.pyw  pyproject.toml  targets.yml
.claude/commands/: draft-outreach.md  find-people.md  log-chat.md  suggest-project.md
docs/: PRD.md
src/relay/: __init__.py  apollo.py  cli.py  config.py  discover.py  flow.py  gmail.py  gui.py  jobs.py  models.py  outreach.py  pipeline.py  resume.py  sheets.py  xlsx_checkbox.py
tests/: conftest.py  test_apollo.py  test_discover.py  test_draft_flow.py  test_jobs.py  test_outreach.py  test_resume.py  test_sheets.py  test_sheets_tracker.py  test_track_flow.py
