[project]
name = "relay"
version = "0.1.0"
description = "A human-gated networking outreach orchestrator"
requires-python = ">=3.11"
dependencies = [
    "pydantic[email]>=2.6",
    "httpx>=0.27",
    "pdfplumber>=0.11",
    "gspread>=6.0",
    "google-auth>=2.28",
    "openpyxl>=3.1",
    "typer>=0.12",
    "rich>=13.7",
    "python-dotenv>=1.0",
]

[project.scripts]
relay = "relay.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/relay"]
